--- a/packages/components/src/styles/components/side-nav/vars.scss
+++ b/packages/components/src/styles/components/side-nav/vars.scss
@@ -7,6 +7,8 @@
 // SIDE-NAV - VARS
 //
 
+@use "../../mixins/interactive-dark-theme" as *;
+
 // LOCAL VARIABLES
 // we use `hds-app` as prefix to distinguish them from the normal tokens
 // notice: they may be overwritten at consumer-level side if needed by re-defining the variables in a container element
@@ -24,6 +26,11 @@
   --hds-app-sidenav-animation-easing: cubic-bezier(0.65, 0, 0.35, 1);
   // toggle-button
   --hds-app-sidenav-toggle-button-width: 24px;
+  // focus ring
+  // TODO: Remove focus tokens once global tokens for dark themes are implemented
+  --hds-app-sidenav-color-focus-action-internal: #{$hds-interactive-dark-theme-color-focus-action-internal};
+  --hds-app-sidenav-color-focus-action-external: #{$hds-interactive-dark-theme-color-focus-action-external};
+  --hds-app-sidenav-focus-ring-action-box-shadow: #{$hds-interactive-dark-theme-focus-ring-action-box-shadow};
 }
 
 // reduced motion
