--- a/packages/components/src/styles/mixins/_interactive-dark-theme.scss
+++ b/packages/components/src/styles/mixins/_interactive-dark-theme.scss
@@ -6,8 +6,18 @@
 @use "../mixins/focus-ring" as *;
 @use "../mixins/button" as *;
 
+// TODO: Remove focus tokens once global tokens for dark themes are implemented
+$hds-interactive-dark-theme-color-focus-action-internal: #bcc7fd;
+$hds-interactive-dark-theme-color-focus-action-external: #0d69f2;
+$hds-interactive-dark-theme-focus-ring-action-box-shadow:
+  inset 0 0 0 1px #{$hds-interactive-dark-theme-color-focus-action-internal},
+  0 0 0 3px #{$hds-interactive-dark-theme-color-focus-action-external};
+
 // Used to apply dark theme to interactive elements such as Button & Dropdown
 @mixin hds-interactive-dark-theme($add-visible-border: true, $is-within-side-nav: false) {
+  // Override token used in focus ring mixin
+  --token-focus-ring-action-box-shadow: #{$hds-interactive-dark-theme-focus-ring-action-box-shadow};
+
   // Default:
   border: 1px solid transparent;
   cursor: pointer;
@@ -55,20 +65,19 @@
     background-color: var(--token-color-palette-neutral-700);
 
     @if ($add-visible-border) {
-      border-color: var(--token-color-focus-action-internal);
+      border-color: $hds-interactive-dark-theme-color-focus-action-internal;
     }
 
     // focus ring:
     &::before {
       color: var(--token-color-foreground-high-contrast);
       border: none;
-      box-shadow: var(--token-focus-ring-action-box-shadow);
     }
   }
 
   // override style removing the focus style
   &:focus:focus:not(:focus-visible)::before {
-    box-shadow: var(--token-focus-ring-action-box-shadow);
+    box-shadow: $hds-interactive-dark-theme-focus-ring-action-box-shadow;
   }
 
   // Active:
